# cardbox

./: Cargo.toml  LICENSE  blue.srm  blue2.srm
common/: Cargo.toml
common/src/: data.rs  gui.rs  lib.rs
common/src/data/: pokemon.rs  save.rs  species.rs
common/src/data/pokemon/: pk1.rs
common/src/data/save/: sav1.rs
common/src/gui/: components.rs  datatypes.rs  ecs.rs  geometry.rs  traits.rs  util.rs
common/src/gui/components/: frame.rs  image.rs
common/src/gui/datatypes/: udim2.rs
common/src/gui/ecs/: components.rs  entity_builder.rs  screen.rs
common/src/gui/traits/: drawable.rs  gui_object.rs
simple_binary/: Cargo.toml
simple_binary/src/: main.rs
tools/: Cargo.toml
tools/src/: import.rs  main.rs
