[package]
name = "common"
version = "0.0.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0", features = [ "image" ] }
strum = "0.25.0"
strum_macros = "0.25.3"
